# tauri-plugin-axum

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  rollup.config.js  tsconfig.json
example/tauri-app/: index.html  package.json  tsconfig.json  vite.config.ts
example/tauri-app/src/: App.css  App.tsx  main.ts  styles.css
example/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
example/tauri-app/src-tauri/capabilities/: default.json
example/tauri-app/src-tauri/src/: lib.rs  router.rs
src/: axios.d.ts  axios.js  fetch.ts  index.ts
tauri-plugin-axum/: Cargo.toml  README.md  build.rs
tauri-plugin-axum/permissions/: default.toml
tauri-plugin-axum/permissions/autogenerated/: reference.md
tauri-plugin-axum/permissions/autogenerated/commands/: call.toml  call_json.toml
tauri-plugin-axum/permissions/schemas/: schema.json
tauri-plugin-axum/src/: commands.rs  error.rs  lib.rs  models.rs
