[package]
name = "tauri-plugin-axum"
version = "0.3.0"
edition = "2021"
rust-version = "1.77.2"

authors = ["mcitem"]
description = "A Tauri plugin that allows calling Axum Router endpoints directly."
license = "MIT"
repository = "https://github.com/mcitem/tauri-plugin-axum"
keywords = ["tauri-plugin", "axum"]

readme = "./README.md"

links = "tauri-plugin-axum"

[dependencies]
tauri = { version = "2.7.0" }

thiserror = "2"

serde = "1.0"
serde_json = "1.0"


axum = "0.8"
tower = "0.5"

http-body-util = "0.1"
futures-util = "0.3.31"
tokio = { version = "1.39", features = ["macros", "sync"] }

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
