[package]
name = "tauri-plugin-axum"
version = "0.9.0"
edition = "2021"
rust-version = "1.77.2"

authors = ["mcitem"]
description = "A Tauri plugin that allows calling Axum Router endpoints directly."
license = "MIT"
repository = "https://github.com/mcitem/tauri-plugin-axum"
keywords = ["tauri-plugin", "axum"]

readme = "./README.md"

links = "tauri-plugin-axum"

[features]
default = ["cors", "tokio-rwlock"]
cors = ["tower-http/cors"]
catch-panic = ["tower-http/catch-panic"]
tokio-rwlock = []

[dependencies]
tauri = { version = "2.10.3" }

thiserror = "2"

serde = "1.0"
serde_json = "1.0"


axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6.6", optional = true }

http-body-util = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "sync"] }
bytes = { version = "1", features = ["serde"] }


[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }
